<resources>
    <string name="app_name">Hand Bell</string>
    <string name="note_c">C</string>
    <string name="note_d">D</string>
    <string name="note_e">E</string>
    <string name="note_f">F</string>
    <string name="note_g">G</string>
    <string name="note_a">A</string>
    <string name="note_b">B</string>
    <string name="pitch_name">%1$s</string>
    <string name="clapper_image">Clapper Image</string>
</resources>
